--- a/choose_card.html
+++ b/choose_card.html
@@ -21,10 +21,10 @@
    </head>
    <body>
    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-   <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" />
+   <!-- <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script> -->
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" /> -->
    <script>
-    new WOW().init();
+    // new WOW().init();
     </script>
 
    <div id="particles-js">
