--- a/reveal_card.html
+++ b/reveal_card.html
@@ -62,7 +62,7 @@
 
                  
             <div class="card-link">
-              <a id="link" href="">點我購買</a>
+              <a class="btn" id="link" href="">點我了解更多</a>
             </div>
 
       </div>
@@ -85,21 +85,21 @@
   {
     "cardTitle": "好暖活-Kindly Warm",
     "cardSubtitle": "海底輪(MULADHARA) CROWN CHAKRA",
-    "cardInfo": "我所經歷的一切充滿幸福\n我能達到一切\n我捨棄所有狹隘的信念\n我使我的內心神聖無畏\n【掌管生存本能】\n海底輪為最底輪，主導一切生存，\n保持最佳身心狀態與安全感，\n對於生命與生活充滿熱情與溫暖。\n調整：身體與心靈缺乏的安全感\n採用精油：薰衣草、檸檬馬鞭草、洋甘菊",
+    "cardInfo": "我所經歷的一切充滿幸福\n我能達到一切\n我捨棄所有狹隘的信念\n我使我的內心神聖無畏\n【掌管生存本能】\n海底輪為最底輪，主導一切生存，\n保持最佳身心狀態與安全感，\n對於生命與生活充滿熱情與溫暖。\n調整：身體與心靈缺乏的安全感",
     "cardImage": "7.png",
     "link": "https://www.savunbio.com/products/kindlywarm"
   },
   {
     "cardTitle": "好桃花-Fate of love",
     "cardSubtitle": "臍輪(SWADHISTHAHA) SACRAL CHAKRA",
-    "cardInfo": "我的體內平靜安穩\n我選擇每天充滿快樂\n我毫無畏懼情感關係\n【掌管兩性與人際關係】\n臍輪代表性的能力，為人性根本，\n代表慾望及人際關係，掌握生活\n愉悅事物，並對人保持尊重與包容。\n調整：和諧的情侶關係、\n改善人際關係\n 採用精油：薰衣草、薄荷、洋甘菊",
+    "cardInfo": "我的體內平靜安穩\n我選擇每天充滿快樂\n我毫無畏懼情感關係\n【掌管兩性與人際關係】\n臍輪代表性的能力，為人性根本，\n代表慾望及人際關係，掌握生活\n愉悅事物，並對人保持尊重與包容。\n調整：和諧的情侶關係、\n改善人際關係",
     "cardImage": "6.png",
     "link": "https://www.savunbio.com/products/fate-in-love"
   },
   {
     "cardTitle": "好旺旺-Good Luck",
     "cardSubtitle": "太陽神經叢(MANIPURA) SOLAR PLEXUS CHAKRA",
-    "cardInfo": "我充滿能量\n我可以達到一切\n我是我生命中的建築者\n我充分的享受我的人生\n【掌管自我認同】\n太陽神經叢幫助找尋自我認同感，\n感受自我，尋找自己的定位，\n傾聽內心真正的聲音。\n調整：尋找自我，發自內心的自信心\n採用精油： 薄荷、檸檬馬鞭草、洋甘菊",
+    "cardInfo": "我充滿能量\n我可以達到一切\n我是我生命中的建築者\n我充分的享受我的人生\n【掌管自我認同】\n太陽神經叢幫助找尋自我認同感，\n感受自我，尋找自己的定位，\n傾聽內心真正的聲音。\n調整：尋找自我，發自內心的自信心",
     "cardImage": "4.png",
     "link": "https://www.savunbio.com/products/good-luck"
   },
@@ -113,21 +113,21 @@
   {
     "cardTitle": "好自然-Step in Nature",
     "cardSubtitle": "喉輪(VISHUDDHA) THROAT CHAKRA",
-    "cardInfo": "我為自己發聲\n我的聲音純淨有力量\n創造力在我的體內流動\n我是自己的導引\n【掌管溝通能力】\n喉輪幫助我們認清自我，並向外人表達真誠情感。\n調整：調整自己的溝通與內省，\n展現人際關係的自在與自信\n採用精油：薄荷、花梨木、檸檬馬鞭草",
+    "cardInfo": "我為自己發聲\n我的聲音純淨有力量\n創造力在我的體內流動\n我是自己的導引\n【掌管溝通能力】\n喉輪幫助我們認清自我，並向外人表達真誠情感。\n調整：調整自己的溝通與內省，\n展現人際關係的自在與自信",
     "cardImage": "3.png",
     "link": "https://www.savunbio.com/products/step-in-nature"
   },
   {
     "cardTitle": "好慵懶-Lazy Cozy",
     "cardSubtitle": "眉心輪(AJNA) THIRD-EYE CHAKRA",
-    "cardInfo": "我從最高的自我中獲得指引\n我活在此時此刻\n我尋求的一切就在我的內心\n我展望著美好正向的未來\n【掌管思考能力】\n位於兩眉之間的眉輪，像似第三隻眼，幫助我們平靜判斷事物。\n調整：心平靜和，放鬆，讓緊繃的心情平靜，思慮清晰\n採用精油：花梨木、佛手柑、洋甘菊",
+    "cardInfo": "我從最高的自我中獲得指引\n我活在此時此刻\n我尋求的一切就在我的內心\n我展望著美好正向的未來\n【掌管思考能力】\n位於兩眉之間的眉輪，像似第三隻眼，幫助我們平靜判斷事物。\n調整：心平靜和，放鬆，讓緊繃的心情平靜，思慮清晰",
     "cardImage": "5.png",
     "link": "https://www.savunbio.com/products/lazy-cozy"
   },
   {
     "cardTitle": "好好睡-Relaxing & Release",
     "cardSubtitle": "頂輪(SAHASRARA) ROOT CHAKRA",
-    "cardInfo": "我深根在這\n我屬於這裡\n我放下一切懷疑與擔憂\n我擁有一切我需要的。\n【掌管靈性、人體能量的中心】\n專注自我，靜夜中自我平靜對話，\n深夜中感受內心溫暖。\n調整：平靜內在，自我對話，\n並給予身心良好睡眠。\n採用精油：佛手柑、薰衣草、花梨木",
+    "cardInfo": "我深根在這\n我屬於這裡\n我放下一切懷疑與擔憂\n我擁有一切我需要的。\n【掌管靈性、人體能量的中心】\n專注自我，靜夜中自我平靜對話，\n深夜中感受內心溫暖。\n調整：平靜內在，自我對話，\n並給予身心良好睡眠。",
     "cardImage": "1.png",
     "link": "https://www.savunbio.com/products/relaxingrelease"
   }
