--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <h1>凡娜緹雅</h1>
     <h1>七脈輪精油占卜</h1>
-    <a id="btn" href="choose_card.html">『開始占卜』</a>
+    <a id="btn" href="choose_card.html">開始占卜</a>
   </div>
 
 </div>
