--- a/reveal_card.html
+++ b/reveal_card.html
@@ -66,6 +66,7 @@
       </div>
       <div class="card-link">
         <a class="btn" id="link" href="">點我了解更多</a>
+        <a class="btn" id="link" href="">下載分享給好友</a>
         <p>凡娜緹雅七脈輪精油</p>
       </div>
 
