--- a/reveal_card.html
+++ b/reveal_card.html
@@ -68,7 +68,7 @@
       <div class="card-link">
         <a class="btn" id="link" href="">點我了解更多</a>
         <br></br>
-        <a class="btn" id="downloadlink" download="VenetiaCard" href="">下載分享給好友</a>
+        <a class="btn" id="downloadlink" href="">下載分享給好友</a>
         <p>凡娜緹雅七脈輪精油</p>
       </div>
 
