--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img id="spin" src="spinngWeel.png"></img>
     </div>
     <h1>凡娜緹雅</h1>
-    <h1>七脈輪精油占卜</h1>
+    <h1>2022年度目標占卜</h1>
     <a id="btn" href="choose_card.html">開始占卜</a>
   </div>
 
