--- a/choose_card.html
+++ b/choose_card.html
@@ -30,7 +30,7 @@
    <div id="particles-js">
  <img id="spin2" src="spinngWeel.png"></img>
 
-  <h1 class="title">選擇一張卡</h1>
+  <h1 class="title">請抽取一張卡片</h1>
   <div class="container">
     <div class="row">
     <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img class="mycard animate__animated animate__flipInX" id="card1" src="card.png"></a>
