--- a/reveal_card.html
+++ b/reveal_card.html
@@ -91,7 +91,7 @@
   {
     "cardTitle": "好暖活-Kindly Warm",
     "cardSubtitle": "海底輪 ROOT CHAKRA<br>#專注 #平靜",
-    "cardInfo": "我所經歷的一切充滿幸福<br>我能達到一切<br>我捨棄所有狹隘的信念<br>我使我的內心神聖無畏<br>【掌管生存本能】<br>海底輪為最底輪，主導一切生存，保持最佳身心狀態與安全感，對於命與生活充滿熱情與溫暖。<br>調整：身體與心靈缺乏的安全感",
+    "cardInfo": "【掌管生存本能】<br>海底輪為最底輪，主導一切生存，保持最佳身心狀態與安全感，對於命與生活充滿熱情與溫暖。<br>調整：身體與心靈缺乏的安全感",
     "cardOil":"｜檸檬馬鞭草、薄荷、佛手柑｜",
     "cardImage": "7.png",
     "link": "https://www.savunbio.com/products/kindlywarm",
@@ -100,7 +100,7 @@
   {
     "cardTitle": "好桃花-Fate of love",
     "cardSubtitle": "臍輪SACRAL CHAKRA<br>#自信魅力 #吸引力",
-    "cardInfo": "我的體內平靜安穩<br>我選擇每天充滿快樂<br>我毫無畏懼情感關係<br>【掌管兩性與人際關係】<br>臍輪代表性的能力，為人性根本，代表慾望及人際關係，掌握生活愉悅事物，並對人保持尊重與包容。<br>調整：和諧的情侶關係、改善人際關係",
+    "cardInfo": "【掌管兩性與人際關係】<br>臍輪代表性的能力，為人性根本，代表慾望及人際關係，掌握生活愉悅事物，並對人保持尊重與包容。<br>調整：和諧的情侶關係、改善人際關係",
     "cardOil":"｜薰衣草｜薄荷｜洋甘菊｜",
     "cardImage": "6.png",
     "link": "https://www.savunbio.com/products/fate-in-love",
@@ -109,7 +109,7 @@
   {
     "cardTitle": "好旺旺-Good Luck",
     "cardSubtitle": "太陽神經叢 SOLAR PLEXUS CHAKRA <br>#正能量 #運氣提升",
-    "cardInfo": "我充滿能量<br>我可以達到一切<br>我是我生命中的建築者<br>我充分的享受我的人生<br>【掌管自我認同】<br>太陽神經叢幫助找尋自我認同感，感受自我，尋找自己的定位，傾聽內心真正的聲音。<br>調整：尋找自我，發自內心的自信心",
+    "cardInfo": "【掌管自我認同】<br>太陽神經叢幫助找尋自我認同感，感受自我，尋找自己的定位，傾聽內心真正的聲音。<br>調整：尋找自我，發自內心的自信心",
     "cardOil":"｜薄荷｜檸檬馬鞭草｜洋甘菊｜",
     "cardImage": "4.png",
     "link": "https://www.savunbio.com/products/good-luck",
@@ -118,7 +118,7 @@
   {
     "cardTitle": "好心情-Good Mood",
     "cardSubtitle": "心輪 HEART CHAKRA <br>#安全感" ,
-    "cardInfo": "我愛且接受自己<br>我的心是敞開的<br>我是平靜的<br>我相信自我也相信這一切<br>【掌管愛與安全感】<br>心輪是內在與外在連結的脈輪，如潔淨美麗的蓮花，出淤泥而不染，一切事物皆在掌握之中。<br>調整：以理性視野看待一切。",
+    "cardInfo": "【掌管愛與安全感】<br>心輪是內在與外在連結的脈輪，如潔淨美麗的蓮花，出淤泥而不染，一切事物皆在掌握之中。<br>調整：以理性視野看待一切。",
     "cardOil":"｜檸檬馬鞭草｜薄荷｜佛手柑｜",
     "cardImage": "2.png",
     "link": "https://www.savunbio.com/products/good-mood",
@@ -127,7 +127,7 @@
   {
     "cardTitle": "好自然-Step in Nature",
     "cardSubtitle": "喉輪THROAT CHAKRA<br>#回歸自我 #調整身心",
-    "cardInfo": "我為自己發聲<br>我的聲音純淨有力量<br>創造力在我的體內流動<br>我是自己的導引<br>【掌管溝通能力】<br>喉輪幫助我們認清自我，並向外人表達真誠情感。<br>調整：調整自己的溝通與內省，展現人際關係的自在與自信",
+    "cardInfo": "【掌管溝通能力】<br>喉輪幫助我們認清自我，並向外人表達真誠情感。<br>調整：調整自己的溝通與內省，展現人際關係的自在與自信",
     "cardOil":"｜薄荷｜花梨木｜檸檬馬鞭草｜",
     "cardImage": "3.png",
     "link": "https://www.savunbio.com/products/step-in-nature",
@@ -136,7 +136,7 @@
   {
     "cardTitle": "好慵懶-Lazy Cozy",
     "cardSubtitle": "眉心輪THIRD-EYE CHAKRA<br>#溝通 #思路清晰",
-    "cardInfo": "我從最高的自我中獲得指引<br>我活在此時此刻<br>我尋求的一切就在我的內心<br>我展望著美好正向的未來<br>【掌管思考能力】<br>位於兩眉之間的眉輪，像似第三隻眼，幫助我們平靜判斷事物。<br>調整：心平靜和，放鬆，讓緊繃的心情平靜，思慮清晰",
+    "cardInfo": "【掌管思考能力】<br>位於兩眉之間的眉輪，像似第三隻眼，幫助我們平靜判斷事物。<br>調整：心平靜和，放鬆，讓緊繃的心情平靜，思慮清晰",
     "cardOil":"｜花梨木｜佛手柑｜洋甘菊｜",
     "cardImage": "5.png",
     "link": "https://www.savunbio.com/products/lazy-cozy",
@@ -145,7 +145,7 @@
   {
     "cardTitle": "好好睡-Relaxing & Release",
     "cardSubtitle": "頂輪CROWN CHAKRA<br>#舒壓解悶 #助眠",
-    "cardInfo": "我深根在這<br>我屬於這裡<br>我放下一切懷疑與擔憂<br>我擁有一切我需要的。<br>【掌管靈性、人體能量的中心】<br>專注自我，靜夜中自我平靜對話，深夜中感受內心溫暖。<br>調整：平靜內在，自我對話，並給予身心良好睡眠。",
+    "cardInfo": "【掌管靈性、人體能量的中心】<br>專注自我，靜夜中自我平靜對話，深夜中感受內心溫暖。<br>調整：平靜內在，自我對話，並給予身心良好睡眠。",
     "cardOil":"｜佛手柑｜薰衣草｜花梨木｜",
     "cardImage": "1.png",
     "link": "https://www.savunbio.com/products/relaxingrelease",
