改好好好睡

--- a/reveal_card.html
+++ b/reveal_card.html
@@ -134,7 +134,7 @@
     "downloadImage":"download-3.jpg"
   },
   {
-    "cardTitle": "好慵懶-Lazy Cozy",
+    "cardTitle": "好好慵懶-Lazy Cozy",
     "cardSubtitle": "眉心輪THIRD-EYE CHAKRA<br>#溝通 #思路清晰",
     "cardInfo": "【掌管思考能力】<br>位於兩眉之間的眉輪，像似第三隻眼，幫助我們平靜判斷事物。<br>調整：心平靜和，放鬆，讓緊繃的心情平靜，思慮清晰",
     "cardOil":"｜花梨木｜佛手柑｜洋甘菊｜",
@@ -143,7 +143,7 @@
     "downloadImage":"download-2.jpg"
   },
   {
-    "cardTitle": "好好睡-Relaxing & Release",
+    "cardTitle": "好好好睡-Relaxing & Release",
     "cardSubtitle": "頂輪CROWN CHAKRA<br>#舒壓解悶 #助眠",
     "cardInfo": "【掌管靈性、人體能量的中心】<br>專注自我，靜夜中自我平靜對話，深夜中感受內心溫暖。<br>調整：平靜內在，自我對話，並給予身心良好睡眠。",
     "cardOil":"｜佛手柑｜薰衣草｜花梨木｜",
