--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img id="spin" src="spinngWeel.png"></img>
     </div>
     <h1>凡娜緹雅</h1>
-    <h1>2024新春魔幻舞台占卜</h1>
+    <h1>2024新春七脈輪占卜</h1>
     <a id="btn" href="choose_card.html">開始</a>
   </div>
 
