--- a/reveal_card.html
+++ b/reveal_card.html
@@ -29,7 +29,7 @@
   <div id="particles-js">
     <img id="spin2" src="spinngWeel.png"></img>
     <div class="container">
-      <h2>你抽到的牌是</h2>
+      <h2>我的2024專屬能量是</h2>
       <div class="card_container">
         <a href="reveal_card"><img id="reveal_card" class="reveal_card animate__animated animate__flipInX" id="card1"
             src="card.png"></a>
@@ -66,10 +66,10 @@
 
       </div>
       <div class="card-link">
-        <a class="btn" id="link" href="">點我了解更多</a>
+        <a class="btn" id="link" href="">了解更多</a>
+        <a class="btn" href="https://www.instagram.com/venetia_nature/">Instagram</a>
         <br></br>
-        <a class="btn" id="downloadlink" href="">下載分享給好友</a>
-        <p>凡娜緹雅七脈輪精油</p>
+        <a class="btn" id="downloadlink" href="">下載並上傳到IG抽專屬精油</a>
       </div>
 
  
@@ -91,7 +91,7 @@
   {
     "cardTitle": "好暖活-Kindly Warm",
     "cardSubtitle": "海底輪 ROOT CHAKRA<br>#專注 #平靜",
-    "cardInfo": "【掌管生存本能】<br>海底輪為最底輪，主導一切生存，保持最佳身心狀態與安全感，對於命與生活充滿熱情與溫暖。<br>調整：身體與心靈缺乏的安全感",
+    "cardInfo": "豐盈<br>2024年是個豐盈的一年，以海底輪為中心，專注生存需求，建立堅實的基礎，迎接變化，<br>維持身心平衡，過著充實的一年。<br>調整：身體與心靈缺乏的安全感",
     "cardOil":"｜檸檬馬鞭草、薄荷、佛手柑｜",
     "cardImage": "7.png",
     "link": "https://www.savunbio.com/products/kindlywarm",
@@ -100,7 +100,7 @@
   {
     "cardTitle": "好桃花-Fate of love",
     "cardSubtitle": "臍輪SACRAL CHAKRA<br>#自信魅力 #吸引力",
-    "cardInfo": "【掌管兩性與人際關係】<br>臍輪代表性的能力，為人性根本，代表慾望及人際關係，掌握生活愉悅事物，並對人保持尊重與包容。<br>調整：和諧的情侶關係、改善人際關係",
+    "cardInfo": "創造<br>肚臍輪的力量將啟發你，在兩性和人際關係中，<br>展現更豐富的創意，促進深層連結，2024成為愛與合作的年份。<br>調整：和諧的情侶關係、提升人際關係",
     "cardOil":"｜薰衣草｜薄荷｜洋甘菊｜",
     "cardImage": "6.png",
     "link": "https://www.savunbio.com/products/fate-in-love",
@@ -109,7 +109,7 @@
   {
     "cardTitle": "好旺旺-Good Luck",
     "cardSubtitle": "太陽神經叢 SOLAR PLEXUS CHAKRA <br>#正能量 #運氣提升",
-    "cardInfo": "【掌管自我認同】<br>太陽神經叢幫助找尋自我認同感，感受自我，尋找自己的定位，傾聽內心真正的聲音。<br>調整：尋找自我，發自內心的自信心",
+    "cardInfo": "彈性<br>越有彈性越有力量的2024年，<br>太陽神經叢引導你建立自我認同。擁有更多彈性，<br>你將擁有更強大的力量，蓄積更多成就。<br>調整：尋找自我，發自內心的自信心",
     "cardOil":"｜薄荷｜檸檬馬鞭草｜洋甘菊｜",
     "cardImage": "4.png",
     "link": "https://www.savunbio.com/products/good-luck",
@@ -118,7 +118,7 @@
   {
     "cardTitle": "好心情-Good Mood",
     "cardSubtitle": "心輪 HEART CHAKRA <br>#安全感" ,
-    "cardInfo": "【掌管愛與安全感】<br>心輪是內在與外在連結的脈輪，如潔淨美麗的蓮花，出淤泥而不染，一切事物皆在掌握之中。<br>調整：以理性視野看待一切。",
+    "cardInfo": "仁愛<br>心輪主宰愛與安全感，2024年的仁愛之力提醒你，<br>先愛自己，再愛他人。<br>這將成為建立深厚關係和燃起內在安定感的關鍵。<br>調整：以理性視野看待一切。",
     "cardOil":"｜檸檬馬鞭草｜薄荷｜佛手柑｜",
     "cardImage": "2.png",
     "link": "https://www.savunbio.com/products/good-mood",
@@ -127,25 +127,25 @@
   {
     "cardTitle": "好自然-Step in Nature",
     "cardSubtitle": "喉輪THROAT CHAKRA<br>#回歸自我 #調整身心",
-    "cardInfo": "【掌管溝通能力】<br>喉輪幫助我們認清自我，並向外人表達真誠情感。<br>調整：調整自己的溝通與內省，展現人際關係的自在與自信",
+    "cardInfo": "驕傲<br>2024年盡情感受每個驕傲的時刻，並善用溝通技巧展現自信。<br>透過自尊心的提升，你將更有效地表達，<br>贏得信任並建立深厚人際關係。<br>調整：提升自己的溝通與內省，展現人際關係的自在與自信",
     "cardOil":"｜薄荷｜花梨木｜檸檬馬鞭草｜",
     "cardImage": "3.png",
     "link": "https://www.savunbio.com/products/step-in-nature",
     "downloadImage":"download-3.jpg"
   },
   {
-    "cardTitle": "好好慵懶-Lazy Cozy",
+    "cardTitle": "好慵懶-Lazy Cozy",
     "cardSubtitle": "眉心輪THIRD-EYE CHAKRA<br>#溝通 #思路清晰",
-    "cardInfo": "【掌管思考能力】<br>位於兩眉之間的眉輪，像似第三隻眼，幫助我們平靜判斷事物。<br>調整：心平靜和，放鬆，讓緊繃的心情平靜，思慮清晰",
+    "cardInfo": "直覺<br>眉心輪啟示著直覺的力量。2024年，堅信自己的初衷，<br>跟著直覺走，開啟更清晰、明確的人生方向。<br>調整：心平靜和，放鬆，思慮清晰",
     "cardOil":"｜花梨木｜佛手柑｜洋甘菊｜",
     "cardImage": "5.png",
     "link": "https://www.savunbio.com/products/lazy-cozy",
     "downloadImage":"download-2.jpg"
   },
   {
-    "cardTitle": "好好好睡-Relaxing & Release",
+    "cardTitle": "好好睡-Relaxing & Release",
     "cardSubtitle": "頂輪CROWN CHAKRA<br>#舒壓解悶 #助眠",
-    "cardInfo": "【掌管靈性、人體能量的中心】<br>專注自我，靜夜中自我平靜對話，深夜中感受內心溫暖。<br>調整：平靜內在，自我對話，並給予身心良好睡眠。",
+    "cardInfo": "勇氣<br>2024年，頂輪賦予你無窮勇氣，<br>引領你蛻變成更高層次的自己，啟動靈性之旅。<br>調整：平靜內在，自我對話，",
     "cardOil":"｜佛手柑｜薰衣草｜花梨木｜",
     "cardImage": "1.png",
     "link": "https://www.savunbio.com/products/relaxingrelease",
