--- a/reveal_card.html
+++ b/reveal_card.html
@@ -67,7 +67,9 @@
       </div>
       <div class="card-link">
         <a class="btn" id="link" href="">了解更多</a>
-        <a class="btn" href="https://www.instagram.com/venetia_nature/">Instagram</a>
+          <a class="img" href="https://www.instagram.com/venetia_nature/">
+              <img src="Instagram_icon.png" width="30" height="30" alt="Instagram Icon">
+          </a>
         <br></br>
         <a class="btn" id="downloadlink" href="">下載並上傳到IG抽專屬精油</a>
       </div>
