--- a/reveal_card.html
+++ b/reveal_card.html
@@ -3,7 +3,9 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet" />
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, 
                                   minimum-scale=1, maximum-scale=1, user-scalable=no" />
