設定預先載入降低圖片等待時間

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="preload" href="card.png" as="image">
+  <link rel="preload" href="1.png" as="image">
+  <link rel="preload" href="2.png" as="image">
+  <link rel="preload" href="3.png" as="image">
+  <link rel="preload" href="4.png" as="image">
+  <link rel="preload" href="5.png" as="image">
+  <link rel="preload" href="6.png" as="image">
+  <link rel="preload" href="7.png" as="image">
+  <link rel="preload" href="Instagram_icon.png" as="image">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, 
                                   minimum-scale=1, maximum-scale=1, user-scalable=no" />
+
+
+                                  
   <apex:stylesheet value="{!URLFOR($Resource.Mobile_Design_Templates, 
                 'Mobile-Design-Templates-master/common/css/app.min.css')}" />
   <apex:includeScript value="{!URLFOR($Resource.Mobile_Design_Templates, 
