更改背景顏色和卡片換圖
增加按鈕
改變背景顏色
卡片換圖
更改一些小按鈕

--- a/choose_card.html
+++ b/choose_card.html
@@ -42,22 +42,22 @@
 
    
       <div class="container">
-        <h2 class="title">請抽取一張卡片</h2>
+        <h2 class="title">選擇一張卡</h2>
         <div class="row">
           <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card1" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card1" src="card_nomal.png"></a>
           <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card2" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card2" src="card_nomal.png"></a>
           <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card3" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card3" src="card_nomal.png"></a>
           <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card4" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card4" src="card_nomal.png"></a>
           <a class="link_wrapper col-4 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card5" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card5" src="card_nomal.png"></a>
           <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card6" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card6" src="card_nomal.png"></a>
           <a class="link_wrapper col-6 p-3" href="reveal_card.html"><img
-              class="mycard animate__animated animate__flipInX" id="card7" src="card.png"></a>
+              class="mycard animate__animated animate__flipInX" id="card7" src="card_nomal.png"></a>
         </div>
       </div>
     </div>
