--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1 class="title-text">2024</h1>
           <h1 class="title-text">新春七脈輪占卜</h1>
         </div>
-        <a id="btn" href="choose_card.html">開 始</a>
+        <a id="btn" href="choose_card.html">開 始 占 卜</a>
       </div>
 
     </div>
