--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-88W75FYX88"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-88W75FYX88');
+</script>
+ <!-- Google tag (gtag.js) -->
   <link rel="stylesheet" href="style.css">
   <link rel="preload" href="card.png" as="image">
   <link rel="preload" href="1.png" as="image">
