--- a/reveal_card.html
+++ b/reveal_card.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-88W75FYX88"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-88W75FYX88');
+</script>
+ <!-- Google tag (gtag.js) -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC" rel="stylesheet" />
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
